Better console and added YAML

--- a/index.html
+++ b/index.html
@@ -32,15 +32,23 @@
         </style>
     </head>
     <body>
-        <div align="center">
+        <div id="flex-console">
             <h1>The Dar's <i>FLEX Web interpreter</i></h1>
-            <p>Copyright (C) 2022 darhm,<BR> Licensed under GPL-3.0 License, <BR>THIS SOFTWARE COMES WITH NO WARRANTY.<BR><i>Example:</i> [["Hello, World"], "#put"]</p>
+            Copyright (C) 2022 darhm,<br>
+            Licensed under GPL-3.0 License, <br>
+            THIS SOFTWARE COMES WITH NO WARRANTY.<br>
+            Type `[help]' to receive an help message <br>
         </div>
-        <div id="flex-console"></div>
         <div class="input-box">
             <input type="text" placeholder="Enter a command" id="command">
         </div>
     </body>
     <script src="flex-int.js"></script>
     <script src="main.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"
+        integrity="sha512-CSBhVREyzHAjAFfBlIBakjoRUKp5h7VSweP0InR/pAJyptH7peuhCsqAI/snV+TwZmXZqoUklpXp6R6wMnYf5Q=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    ></script>
 </html>
